# fieldneuro

./: README.md  pyproject.toml  setup.py
QuickScripts/: batch_video_downsample.py
TutorialNotebooks/: ABMA.ipynb  PoseEstimationPipeline.ipynb
TutorialNotebooks/2022_LID_FieldRipples/: .Rhistory  AnalyzeRFID.ipynb  PreProcessUWB.ipynb  PreprocessVideos.ipynb  ProcessDAT.ipynb  rfid_SpatialBehavior.Rmd  rfid_SpatialBehavior.nb.html  rfid_preprocessing.Rmd  rfid_preprocessing.nb.html
dev_tests/: crop_video.py  downsample_videos.py  downsample_videos_dev.py
fnt/: __init__.py
fnt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fnt/retired_scripts/: batch_video_concatenate.py  ffmpeg_hardcode_smi_timestamps.txt
fnt/sleap_processing/: batch_sleap_convert.py  batch_sleap_track.py  batch_video_inference_and_track.py  sleap_batch_inference.py
fnt/tests/: test_function.py
fnt/ultrasonicvocalizations/: compress_wavs.py  das_summary.py
fnt/ultrawideband/: plot_uwb_path.py  preprocess_sql.py  preprocess_uwb_sql_databse.py  uwb_convert_database.py  uwb_smoothing.py
fnt/usv/: usv_heterodyne.py
fnt/usv_preprocessing/: ffmpeg_compress_wavs.py  usv_processing.R
fnt/uwb/: UWB_ToDo.md  animate_path.py  behavioral_classifier.py  preview_database.py  test_animation.py  test_behavioral_classifier.py  test_day_selection.py  test_tag_gui.py  uwb_animate.py  uwb_animate_paths.py  uwb_behavioral_analysis.py  uwb_gui.py  uwb_plot_paths.py  uwb_plots.py
fnt/uwb_preprocessing/: plot_path.py  preprocess_uwb.py
tests/: ffmpeg_TrimVideos_dev.py  test_import.py
(+14 files in other folders)
