[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnt"
version = "0.1"
dependencies = [
    "opencv-python",
    "numpy",
    "ffmpeg-python",
    "tk",
    "pandas",
    "matplotlib",
    "tqdm",
    "seaborn",
    "scipy",
    "shapely",
    "openpyxl",
    "soundfile",
    "moviepy"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["fnt"]